--- a/desafios/d012/style.css
+++ b/desafios/d012/style.css
@@ -1,5 +1,14 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -8,6 +17,8 @@
 html, body {
     height: 100vh; /* As unidades relativas vw (viewport width) e vh (viewport height) utilizam a largura e altura da viewport */
     background-color: darkgray;
+    font-family: var(--fonte1);
+    font-size: 1em;
 }
 
 header {
@@ -20,6 +31,8 @@ header > h1 {
     padding-top: 50px;
     /* text-transform: uppercase; transforma TODAS as letras em maiúscula do mesmo tamanho */
     font-variant: small-caps; /* Tranf. TODAS em amiúscula porém, somente a primeira letra grande */
+    font-family: var(--fonte2);
+    font-size: 10vw;
 }
 
 header > p {
@@ -41,6 +54,8 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
 
 section.normal {
@@ -54,7 +69,9 @@ section.imagem {
 }
 
 section.imagem > p {
-    width: 400px;
+    /* width: 400px; */
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.242);
 }
 
